--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-   <style>
+ <!--  <style>
          * {
     font-family: 'Raleway', sans-serif;
     color: #333333;
@@ -251,7 +251,7 @@ footer {
 a:hover.linkcolor {
     color: #FFCC00;
 }
-        </style>
+        </style> -->
     </head>
     <body>
         <header>
